# quest-mod-template

./: .templatr  README.md
template/: Cargo.toml  build.ps1  createQMOD.ps1  mod.json  mod.template.json  ndkpath.txt  qpm.json
template/src/: lib.rs
